integrate logout feature
