# src/router/auth.routes.ts
@@ -1,8 +1,9 @@
 import express from "express";
-import { RegisterUser, LoginUser } from "../controller/auth.controller";
+import { RegisterUser, LoginUser, Logout } from "../controller/auth.controller";
 
 const router = express.Router();
 router.post("/register", RegisterUser);
-router.post("/login", LoginUser);
+router.post("/login", LoginUser); 
+router.get("/logout", Logout);
 
 export default router;
